# bazel-skeleton-project

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod  jar_finder.sh  module_extensions_test.bzl  sonar-project.properties
extras/: moduleExetension.txt
go-test-module/: BUILD.bazel  hello-world.go  hello-world_test.go
java-test-module/: BUILD.bazel
java-test-module/src/main/java/usb/example/: A.java  AImpl.java  App.java  B.java  C.java  test.yaml
java-test-module/src/test/java/usb/example/: AppTest.java  BTest.java  CTest.java  DTest.java
tools/bazel/: bazelproject
tools/bazel/cache/deploy-remote-cache/: README.md
tools/bazel/cache/deploy-remote-cache/Docs/: README.md
tools/bazel/cache/deploy-remote-cache/Docs/bazel-remote-cache-server/: Chart.yaml  values.yaml
tools/bazel/cache/deploy-remote-cache/Docs/bazel-remote-cache-server/templates/: NOTES.txt  _helpers.tpl  config.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  statefulSet.yaml
tools/bazel/cache/deploy-remote-cache/Docs/bazel-remote-cache-server/templates/tests/: test-connection.yaml
tools/bazel/cache/deploy-remote-cache/cache1/: pod-monitor.yaml  service-monitor.yaml  statefulSet.yaml
tools/bazel/cache/deploy-remote-cache/cache2/: pod-monitor.yaml  service-monitor.yaml  service.yaml  statefulSet.yaml
tools/bazel/cache/deploy-remote-cache/cache3/: pod-monitor.yaml  service-monitor.yaml  service.yaml  statefulSet.yaml
tools/bazel/cache/deploy-remote-cache/certs/: kube_stuff.txt
tools/bazel/cache/deploy-remote-cache/common/: config.yaml  ingress-130.yaml  ingress.yaml
tools/bazel/cache/experiments/: README.md  busybox.yaml  config.yaml  deployment.yaml  example.yaml  persistentVolume.yaml  service.yaml  statefulSet.yaml
tools/bazel/cache/s3-config/: config
tools/bazel/sonarqube/: BUILD.bazel  defs.bzl  repositories.bzl  sonar-project-go.properties.tpl  sonar-project.properties.tpl
tools/bzl-files/: custom-rules.bzl  utils.bzl
tools/pinned-versions/: BUILD.bazel  maven_install.json
