module(
    name = "go_bazel_workspace",
    version = "1.0.0",
)

#-----------------------GLOBAL Configurations----------------------------

# bazel_dep(name = "com_github_bazelbuild_buildtools", version = "4.0.1")
# archive_override(
#   module_name = "com_github_bazelbuild_buildtools",
#   urls = "https://harness-artifactory.harness.io/artifactory/bazel-buildtools-github/archive/refs/tags/4.0.1.zip",
#   strip_prefix = "buildtools-4.0.1",
#   patches = ["//tools/bazel/external/buildtools/patch:0001-Adding-MODULE.bazel.patch"],
#   integrity = "sha256-kyFg1WlOaIy3oFrDjvukuakEcMdfOXFthfsdL5XuyW0=",
#   patch_strip = 1
# )

#------------------------GO Configurations-------------------------------

bazel_dep(name = "rules_go", repo_name = "io_bazel_rules_go", version = "0.39.1")
bazel_dep(name = "gazelle", repo_name = "bazel_gazelle", version = "0.30.0")
bazel_dep(name = "bazel_skylib", repo_name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "protobuf", repo_name = "com_google_protobuf", version = "21.7")

go_register_toolchains = use_extension("@rules_go//go:deps.bzl", "register_toolchains")
go_register_toolchains.download(version = "1.19.8")

go_rules_dependencies = use_extension("@rules_go//go:deps.bzl", "go_rules_dependencies")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.20.3")

gazelle_dependencies = use_extension("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")

bzl_library = use_extension("@bazel_skylib//:bzl_library.bzl", "bzl_library")

protobuf_deps = use_extension("@protobuf//:protobuf_deps.bzl", "protobuf_deps")


#------------------------SONAR Configurations-------------------------------

sonar_scanner_cli_version = "3.3.0.1492"

bazel_dep(name = "org_sonarsource_scanner_cli_sonar_scanner_cli", repo_name = "org_sonarsource_scanner_cli_sonar_scanner_cli", version = "3.3.0.1492")
archive_override(
        module_name = "org_sonarsource_scanner_cli_sonar_scanner_cli",
        urls = [
            "https://repo1.maven.org/maven2/org/sonarsource/scanner/cli/sonar-scanner-cli/%s/sonar-scanner-cli-%s.zip" % (sonar_scanner_cli_version, sonar_scanner_cli_version),
            "https://jcenter.bintray.com/org/sonarsource/scanner/cli/sonar-scanner-cli/%s/sonar-scanner-cli-%s.zip" % (sonar_scanner_cli_version, sonar_scanner_cli_version),
        ],
        strip_prefix = "sonar-scanner-" + sonar_scanner_cli_version,
        integrity = "sha256-D6vT+i4Qu/xc32R2X/NeiOeTfkiq1R2EQBufNtveNng=",
        patches = [
            "//tools/bazel/external/sonarqube/patch:0001-temp-patch-file.patch",
            "//tools/bazel/external/sonarqube/patch:0001-Adding-MODULE.bazel.patch",
            ],
        patch_strip = 1
    )

bazel_dep(name = "stardoc", repo_name = "io_bazel_stardoc", version = "0.5.3")
stardoc_repositories = use_extension("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")


# sonar_repository = use_extension("//tools/bazel/sonarqube:repositories.bzl", "ext_bazel_sonarqube_repositories")
# use_repo(sonar_repository, "bazel_sonarqube_repositories")

# test = use_extension("//:module_extensions_test.bzl", "ext_test")
# use_repo(test, "test_repo_rule")


#------------------------JAVA Configurations-------------------------------

bazel_dep(name = "rules_jvm_external", repo_name = "rules_jvm_external", version = "5.3")
maven_install = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven_install.install(
    artifacts = [
        "junit:junit:4.12",
    ],
    repositories = [
        "https://jcenter.bintray.com/",
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:tools/pinned-versions/maven_install.json",
    version_conflict_policy = "pinned",
    fetch_sources = True,

)

use_repo(maven_install, "maven", "unpinned_maven")

default_java_toolchain = use_extension("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "default_java_toolchain")
BASE_JDK9_JVM_OPTS = use_extension("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "BASE_JDK9_JVM_OPTS")
DEFAULT_TOOLCHAIN_CONFIGURATION = use_extension("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "DEFAULT_TOOLCHAIN_CONFIGURATION")

use_repo(default_java_toolchain, "default_java_toolchain")
