load("//:tools/bzl-files/utils.bzl", "genrule_func", "run_analysis", "run_tests")
load("//:tools/bzl-files/custom-rules.bzl", "yamllint")

filegroup(
    name = "java_srcs",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "java_test_srcs",
    srcs = glob(["src/test/java/**/*.java"]),
    visibility = ["//visibility:public"],
)

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
)

java_library(
    name = "moduleTest",
    srcs = glob(["src/test/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "@maven//:junit_junit",
    ],
)

#java_test(
#    name = "moduleTest",
#    srcs = [":java_test_srcs"],
#    test_class = "usb.example.DTest",
#    visibility = ["//visibility:public"],
#    deps = [
#        ":module",
#        "@maven//:junit_junit",
#    ],
#)

run_tests(srcs = "src/test/java/**/*.java")

run_analysis()

genrule_func()

yamllint(
    name = "linting",
    srcs = "src/main/java/usb/example/test.yaml",
    output = "yamllint.log",
)
